{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "019fbc32-de5c-44bd-a684-423d1b15cc35",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "e4f914b1-af6b-46f5-915a-1df70c4fd7ad",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "VerticalAttack",
                    "type": "Button",
                    "id": "b4c780f3-b70f-4996-9072-7e7437348edd",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DashAttack",
                    "type": "Button",
                    "id": "4ade17c9-d256-4762-a730-020933874a23",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "e12f321d-c7e5-4985-b49e-be36bb1c20ab",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "BackDash",
                    "type": "Button",
                    "id": "6d43231c-b668-4f88-9ab2-eb157eab3569",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2392534c-b3ce-4207-a977-f49ad6f48c83",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VerticalAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4be66b2e-7866-4697-8e0a-a97d002a4c99",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DashAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6f443da9-0966-408a-b282-43a715b9bedb",
                    "path": "<Gamepad>/leftStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fa3a1ba6-4b15-40f3-ab1f-7659ed0cbd98",
                    "path": "<Gamepad>/dpad/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "740ceb65-652c-41b4-bf76-97f502bc2514",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "76a1d54c-1007-4720-b444-3f1f349147c3",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BackDash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0abec7b2-e78b-421f-b72f-1ea0a07cd513",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BackDash",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}